--- a/src/components/articles/articles.styles.css
+++ b/src/components/articles/articles.styles.css
@@ -100,7 +100,7 @@
     margin-top: 40px;
 }
 
-.articles-component .pagination button{
+.articles-component .pagination .page-item{
     height: 30px;
     background-color: #E59C23;
     color: #fff;
@@ -110,15 +110,27 @@
     padding: 6px 10px;
     border-radius: 3px;
     cursor: pointer;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.articles-component .pagination button:last-child{
+.articles-component .pagination .page-item a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.articles-component .pagination .page-item:last-child{
     margin-right: 0;
 }
 
-.articles-component .pagination button.active{
+.articles-component .pagination .page-item.active{
     border: 2px solid #E59C23;
     background: none;
+}
+
+.articles-component .pagination .page-item.active a{
     color: #E59C23;
 }
 
